15. January 2020
    - Replaces MobileAdTracker with adaway.github.io