@@ -1,2 +1,6 @@
+01. May 2020
+	- Updated `hosts-file.net` to be updated from https://bitbucket.org/expiredsources/hosts-file.net/
+	  From where we also only includes actually active records.
+
 15. January 2020
     - Replaces MobileAdTracker with adaway.github.io
